tests/neg-custom-args/captures/consume-twice.check
-- Type Error: tests/neg-custom-args/captures/consume-twice.scala:6:7 --------------------------------------------------
Separation failure: Illegal access to (x : Object^), which was passed to a
consume parameter or was used as a prefix to a consume method
and therefore is no longer available.

where:    ^ refers to a fresh root capability in the type of parameter x
5 |  send(x)
  |       -
  |       The capability was consumed here.
6 |  send(x)  // error
  |       ^
  |       Then, it was used here

